fix auth item text align

--- a/src/pages/cart/sections/cart-section.scss
+++ b/src/pages/cart/sections/cart-section.scss
@@ -21,8 +21,10 @@
       line-height: 32px;
       letter-spacing: 0.01em;
       color: var(--foreground);
+      text-align: center;
     }
     &__links {
+      text-align: center;
     }
 
     &__link {
